# shorty

./: .clang-format  .tm_properties  CMakeLists.txt  README.md  shorty.cpp  test-single-header.cpp  test.cpp  tmp.hpp
cmake/: pedantic.cmake
examples/: CMakeLists.txt  test-single-header.cpp  test.cpp
single-header/: CMakeLists.txt  generate.cmake  shorty.hpp  shorty.hpp.in
source/: CMakeLists.txt
source/shorty/: leaves.cppm  leaves.hpp  literals.cppm  literals.hpp  ops.cppm  ops.hpp  shorty.cppm  shorty.hpp
source/shorty/compatibility/: concepts.cppm  concepts.hpp  pack-indexing.cppm  pack-indexing.hpp
